button gap fix

--- a/src/Components/KBDButtons/KBDButtons.css
+++ b/src/Components/KBDButtons/KBDButtons.css
@@ -9,6 +9,6 @@
         width: 3.8rem;
     }
     .width-9-5-rem{
-        width: 8.82rem;
+        width: 8.80rem;
     }
 }
